--- a/content/resources/css/transfer-deadline.css
+++ b/content/resources/css/transfer-deadline.css
@@ -5,4 +5,8 @@
 	color: #800;
 }
 
+.findSimilarPlayers {
+	width: 106% !important;
+}
+
 }
